cmake_minimum_required(VERSION 3.16)
project(CodingInterviewChinese2)

set(CMAKE_CXX_STANDARD 11)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

add_library(base base/Array.cpp base/BinaryTree.cpp 08_GetNextBinaryTreeNode/BinaryTreeEx.cc base/List.cpp base/StringUtil.cpp base/Tree.cpp)
include_directories(${PROJECT_SOURCE_DIR})

add_executable(01_AssignmentOperator 01_AssignmentOperator/main.cc)
add_executable(03_01_DuplicationInArray 03_01_DuplicationInArray/main.cc)
add_executable(03_02_DuplicationInArrayNoEdit 03_02_DuplicationInArrayNoEdit/main.cc)
add_executable(04_FindInPartiallySortedMatrix 04_FindInPartiallySortedMatrix/main.cc)
add_executable(05_ReplaceSpaces 05_ReplaceSpaces/main.cc)
add_executable(06_ReversePrint 06_ReversePrint/main.cc)
target_link_libraries(06_ReversePrint base)
add_executable(07_BuildBinaryTree 07_BuildBinaryTree/main.cc)
target_link_libraries(07_BuildBinaryTree base)
add_executable(08_GetNextBinaryTreeNode 08_GetNextBinaryTreeNode/main.cc 08_GetNextBinaryTreeNode/BinaryTreeEx.cc)
target_link_libraries(08_GetNextBinaryTreeNode base)
add_executable(09_QueueWithTwoStacks 09_QueueWithTwoStacks/main.cc)
add_executable(10_Fibonacci 10_Fibonacci/main.cc)
add_executable(11_MinNumberInRotatedArray 11_MinNumberInRotatedArray/main.cc)
add_executable(12_StringPathInMatrix 12_StringPathInMatrix/main.cc)
add_executable(13_RobotMove 13_RobotMove/main.cc)
add_executable(14_CuttingRope 14_CuttingRope/main.cc)
add_executable(15_NumberOf1InBinary 15_NumberOf1InBinary/main.cc)
add_executable(16_Power 16_Power/main.cc)
add_executable(18_01_DeleteNode 18_01_DeleteNode/main.cc)
target_link_libraries(18_01_DeleteNode base)
add_executable(18_02_DeleteDuplication 18_02_DeleteDuplication/main.cc)
target_link_libraries(18_02_DeleteDuplication base)
add_executable(21_ReorderArray 21_ReorderArray/main.cc)
add_executable(22_GetKthFromEnd 22_GetKthFromEnd/main.cc)
target_link_libraries(22_GetKthFromEnd base)
add_executable(23_EntryNodeOfLoop 23_EntryNodeOfLoop/main.cc)
target_link_libraries(23_EntryNodeOfLoop base)
add_executable(24_ReverseList 24_ReverseList/main.cc)
target_link_libraries(24_ReverseList base)
add_executable(25_MergeTwoLists 25_MergeTwoLists/main.cc)
target_link_libraries(25_MergeTwoLists base)
add_executable(26_IsSubstructure 26_IsSubstructure/main.cc)
target_link_libraries(26_IsSubstructure base)
add_executable(27_MirrorBinaryTree 27_MirrorBinaryTree/main.cc)
target_link_libraries(27_MirrorBinaryTree base)
add_executable(28_SymmetricBinaryTree 28_SymmetricBinaryTree/main.cc)
target_link_libraries(28_SymmetricBinaryTree base)
add_executable(29_PrintMatrix 29_PrintMatrix/main.cc)
add_executable(30_MinInStack 30_MinInStack/main.cc)
add_executable(31_StackPushPopOrder 31_StackPushPopOrder/main.cc)
add_executable(32_01_PrintTreeFromTopToBottom 32_01_PrintTreeFromTopToBottom/main.cc)
target_link_libraries(32_01_PrintTreeFromTopToBottom base)
add_executable(32_02_PrintTreeInLine 32_02_PrintTreeInLine/main.cc)
target_link_libraries(32_02_PrintTreeInLine base)
add_executable(32_03_PrintTreeInZigZag 32_03_PrintTreeInZigZag/main.cc)
target_link_libraries(32_03_PrintTreeInZigZag base)
add_executable(33_VerifyPostorder 33_VerifyPostorder/main.cc)
target_link_libraries(33_VerifyPostorder base)
add_executable(34_PathSum 34_PathSum/main.cc)
target_link_libraries(34_PathSum base)
add_executable(35_CopyRandomList 35_CopyRandomList/main.cc)
target_link_libraries(35_CopyRandomList base)
add_executable(36_TreeToDoublyList 36_TreeToDoublyList/main.cc)
target_link_libraries(36_TreeToDoublyList base)
add_executable(37_SerializeBinaryTree 37_SerializeBinaryTree/main.cc)
target_link_libraries(37_SerializeBinaryTree base)
add_executable(38_StringPermutation 38_StringPermutation/main.cc)
add_executable(40_KLeastNumbers 40_KLeastNumbers/main.cc)
add_executable(42_MaxSumOfSubarray 42_MaxSumOfSubarray/main.cc)
add_executable(45_SortArrayForMinNumber 45_SortArrayForMinNumber/main.cc)
add_executable(47_MaxValueOfGifts 47_MaxValueOfGifts/main.cc)
add_executable(50_01_FirstNotRepeatedChar 50_01_FirstNotRepeatedChar/main.cc)
add_executable(50_02_FirstCharacterInStream 50_02_FirstCharacterInStream/main.cc)
add_executable(52_GetIntersectionNode 52_GetIntersectionNode/main.cc)
target_link_libraries(52_GetIntersectionNode base)
add_executable(54_KthLargest 54_KthLargest/main.cc)
target_link_libraries(54_KthLargest base)
add_executable(55_01_MaxDepth 55_01_MaxDepth/main.cc)
target_link_libraries(55_01_MaxDepth base)
add_executable(55_02_IsBalanced 55_02_IsBalanced/main.cc)
target_link_libraries(55_02_IsBalanced base)
add_executable(58_02_LeftRotateString 58_02_LeftRotateString/main.cc)
target_link_libraries(58_02_LeftRotateString base)
add_executable(63_MaxProfit 63_MaxProfit/main.cc)
add_executable(68_02_LowestCommonAncestor 68_02_LowestCommonAncestor/main.cc)
target_link_libraries(68_02_LowestCommonAncestor base)